# cargo-template

./: Cargo.toml  Justfile  README.md
src/: context.rs  error.rs  main.rs
template/: clap_main.rs
template/just/: Justfile
template/readme/: README.md
templates/clap/: Cargo.toml  Justfile  LICENSE.md  README.md
templates/clap/.github/workflows/: test.yaml
templates/github-actions/.github/workflows/: release.yaml
templates/just/: Justfile
templates/just.lib.ts/: Justfile
templates/readme/: README.md
