[package]
name = "cargo-template"
version = "0.1.0"
edition = "2021"
default-run = "cargo-template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
askama = { version = "0.10.5", features = [] }
clap = "3.0.0-beta.5"
env_logger = "0.9.0"
include_dir = "0.7.1"
log = "0.4.14"
rust-ini = "0.17.0"
rustyline = "9.0.0"
serde = "1.0.130"
serde_json = "1.0.72"
tera = "1.15.0"
toml = "0.5.8"
